--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "main": "pages/index.tsx",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -19,12 +18,12 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.1.6",
-    "next-translate": "2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "next-translate-plugin": "^2.0.2"
   }
 }
