--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-hash-link": "^2.4.3",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
     "typescript": "4.9.5"
-  },
-  "devDependencies": {
   }
 }
